# wordchain

./: .coveragerc  .gitignore  Dockerfile.tox  LICENSE  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: mypy.yml  python-publish.yml  test.yml
src/wordchain/: __init__.py  errors.py  version.py  wordchain.py
tests/: tests.py
tests/files/: rubbish.txt  simple-word-list.txt
