[project]
name = "wordchain"
version = "0.4.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "tox>=4.18.0",
    "tox-uv>=1.11.2",
    "mypy>=1.11.2",
    "setuptools>=74.0.0",
    "ruff>=0.6.3",
]
